# undock-compose

./: .dir-locals.el  .flake8  README.org  pyproject.toml  requirements.txt  undock
tests/: test_undock_compose.py
undocker/: __init__.py  main.py
